# telegram-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: auto-deploy.yml
scripts/: aoto_deploy.sh  auto_deploy.sh  check_and_deploy.sh  deploy.sh  init_db.py
src/astra/: __main__.py  constants.py  exceptions.py  handlers.py  main.py  register.py  utils.py
src/astra/config/: default.toml  default.toml.example  settings.py
src/astra/data/: README.md
src/astra/handlers/: commands.py  conversations.py  messages.py  register.py
src/astra/middlewares/: logging_middleware.py
src/astra/models/: message.py  user.py
src/astra/modules/: aichat.py  errors.py  help.py  start.py  tasks.py  weather.py
src/astra/modules/data/: weather_citys.csv
src/astra/plugins/: sample_plugin.py  weather.py
src/astra/services/: cache.py  caiyun_service.py  db.py
src/astra/services/data/: weather_location.csv
